<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <androidx.cardview.widget.CardView
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:elevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_10"
                android:src="@drawable/quantum_ic_arrow_back_grey600_24" />

            <TextView
                android:id="@+id/tv_faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Change Password"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />

            <RelativeLayout
                android:id="@+id/cart_count_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="?attr/actionBarItemBackground"
                android:gravity="center"
                android:minWidth="20dp"
                android:minHeight="?attr/actionBarSize"
                android:paddingStart="10dp"
                android:paddingEnd="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/hotlist_bell"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:src="@drawable/vector_cart"
                    android:tint="@color/colorBlack" />

                <TextView
                    android:id="@+id/tv_cart_item_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/hotlist_bell"
                    android:layout_alignEnd="@id/hotlist_bell"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/cart_count"
                    android:gravity="center"
                    android:minWidth="17sp"
                    android:paddingLeft="5dp"
                    android:paddingTop="0dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="1dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/old_pwd_txt"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="2dp"
            app:met_floatingLabelTextSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLength="20"
            android:inputType="textPassword"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_pwd_txt"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="2dp"
            app:met_floatingLabelTextSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLength="20"
            android:inputType="textPassword"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/confirm_pwd_txt"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="2dp"
            app:met_floatingLabelTextSize="15sp" />



        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/colorPrimaryone"
            android:gravity="center"
            android:text="@string/submit_txt"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:textSize="17sp"
            android:layout_marginTop="@dimen/dp_55"/>
    </LinearLayout>




</LinearLayout>