<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <androidx.cardview.widget.CardView
        android:id="@+id/tool_activity"
        android:layout_width="match_parent"
        app:cardElevation="@dimen/_5sdp"
        android:layout_height="@dimen/dp_50">
        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_10"
                android:src="@drawable/ic_back_arrow"
                app:tint="@color/colorBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Login"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/sp_15" />
            <RelativeLayout
                android:id="@+id/cart_count_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="?attr/actionBarItemBackground"
                android:gravity="center"
                android:visibility="gone"
                android:minHeight="?attr/actionBarSize"
                android:minWidth="20dp"
                android:paddingEnd="5dp"
                android:paddingStart="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/hotlist_bell"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:tint="@color/colorBlack"
                    android:src="@drawable/vector_cart" />

                <TextView
                    android:id="@+id/tv_cart_item_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/hotlist_bell"
                    android:layout_alignTop="@id/hotlist_bell"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/cart_count"
                    android:gravity="center"
                    android:minWidth="17sp"
                    android:paddingBottom="1dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="0dp"
                    android:text="0"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/_200sdp"
            android:src="@drawable/signinlogomd"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_height="@dimen/_60sdp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/logintxtxh"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_usr_name"
            android:layout_width="match_parent"
            android:background="@drawable/edit_back_with_gray"
            android:drawableLeft="@drawable/signsh"
            android:drawablePadding="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:hint="Email Address"
            android:layout_height="@dimen/_35sdp"/>

        <EditText
            android:id="@+id/edt_usr_pass"
            android:layout_width="match_parent"
            android:background="@drawable/edit_back_with_gray"
            android:drawableLeft="@drawable/passwordhd"
            android:hint="Password"
            android:drawablePadding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:layout_height="@dimen/_35sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_forgot_pass"
            android:layout_width="wrap_content"
            android:text="@string/forgot_pass"
            android:layout_gravity="right"
            android:textColor="@color/colorRed"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="right"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="left"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/remember_me"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@color/colorPrimaryone"
            android:layout_height="@dimen/_35sdp"/>

        <TextView
            android:id="@+id/txt_create_acc"
            android:layout_width="match_parent"
            android:text="@string/create_new_acc"
            android:layout_gravity="center"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>